--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,12 +18,11 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
+      "@guards/*": ["./src/guards/*"],
       "@helpers/*": ["./src/helpers/*"],
-      "@lib/*": ["./src/lib/*"],
       "@models/*": ["./src/models/*"],
       "@modules/*": ["./src/modules/*"],
       "@schemas/*": ["./src/schemas/*"],
-      "@test/*": ["./test/*"]
     }
   }
 }
