--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@vee-validate/rules": "^4.11.8",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "jwt-decode": "^3.1.2",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vee-validate": "^4.11.8",
