--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,8 +18,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@guards/*": ["./src/guards/*"],
       "@helpers/*": ["./src/helpers/*"],
+      "@lib/*": ["./src/lib/*"],
       "@models/*": ["./src/models/*"],
       "@modules/*": ["./src/modules/*"],
       "@schemas/*": ["./src/schemas/*"],
