--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "ramda": "^0.29.1",
     "vee-validate": "^4.11.8",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@quasar/app-webpack": "^3.0.0",
     "@types/node": "^12.20.21",
+    "@types/ramda": "^0.29.7",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.10.0",
