--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
+    "ramda": "^0.29.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/ramda": "^0.29.7",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
